API 기능 구현
